svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-app
  namespace: prod
spec:
  selector:
    app: deploy-app
  ports:
    - port: 80
      targetPort: 80
