ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-app
spec:
  ingressClassName: nginx
  rules:
    - host: domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-app
                port:
                  number: 80
