networkpolicy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-app
  namespace: prod
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
